--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
                 <br>
                 <img src="img/process.png" alt="">
                 <h2>This program, available on my GitHub, works similarly to lsof. It collects information from the native /proc/ folder and displays it in a CLI environment. It also has various flags, like showing full paths or searching for specific files.</h2>
+                <br>
+                <br>
+                <h1>$ GourLife</h1>
+                <br>
+                <img src="img/glife.png" alt="">
+                <h2>This is a Minecraft plugin. It is available on my GitHub. It is a hardcore plugin that gives every player a certain number of lives. When a player kills someone, they gain a life, and when someone dies, they lose a life. All the settings are in the config.</h2>
             </div>
         </div>
     </body>
