Language changer added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
                     <img src="img/git.svg" alt="GitHub" style="width: 40px; height: 40px;">
                 </a>
             </div>
+            <div class="button">
+                <a href="italy.html">
+                    <h2>🇮🇹</h2>
+                </a>
+            </div>
         </div>
         <div class="section" style="font-size: xx-large;">
             <div class="container">
@@ -63,5 +68,6 @@
                 <h2>This is a Minecraft plugin. It is available on my GitHub. It is a hardcore plugin that gives every player a certain number of lives. When a player kills someone, they gain a life, and when someone dies, they lose a life. All the settings are in the config.</h2>
             </div>
         </div>
+        <script src="code.js"></script>
     </body>
 </html>
