Edit project text

--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
                 <br>
                 <img src="img/process.png" alt="">
                 <h2>This program, available on my GitHub, works similarly to lsof. It collects information from the native /proc/ folder and displays it in a CLI environment. It also has various flags, like showing full paths or searching for specific files.</h2>
+                <h2>For this project, I used the following technologies: </h2>
+                <h3>
+                     | Ncurses <br>
+                     | C++ <br>
+                     | Regex <br>
+                     | Linux '/proc' directory
+                </h3>
                 <br>
                 <br>
                 <h1>$ GourLife</h1>
