--- a/italy.html
+++ b/italy.html
@@ -59,6 +59,13 @@
                 <br>
                 <img src="img/process.png" alt="">
                 <h2>Questo programma, disponibile sul mio GitHub, funziona simile a lsof. Raccolgo informazioni dalla cartella /proc/ e le visualizzo in ambiente CLI. Supporta varie opzioni come mostrare percorsi completi o cercare file specifici.</h2>
+                <h2>Per questo progetto, ho usato le seguenti tecnologie: </h2>
+                <h3>
+                     | Ncurses <br>
+                     | C++ <br>
+                     | Regex <br>
+                     | Linux '/proc' directory
+                </h3>
                 <br><br>
                 <h1>$ GourLife</h1>
                 <br>
