Updated project section

--- a/italy.html
+++ b/italy.html
@@ -51,26 +51,30 @@
             </div>
         </div>
         <hr>
-        <div class="section">
-            <div class="container-center">
-                <h1>Progetti:</h1>
-                <br><br>
+        <div class="section" style="justify-content: left; flex-direction: row; flex-wrap: wrap;">
+            <div class="project-box">
                 <h1>$ Linux Memory Dumper</h1>
                 <br>
                 <img src="img/process.png" alt="">
-                <h2>Questo programma, disponibile sul mio GitHub, funziona simile a lsof. Raccolgo informazioni dalla cartella /proc/ e le visualizzo in ambiente CLI. Supporta varie opzioni come mostrare percorsi completi o cercare file specifici.</h2>
-                <h2>Per questo progetto, ho usato le seguenti tecnologie: </h2>
+                <h2>Questo programma, disponibile sul mio GitHub, funziona in modo simile a lsof. Raccoglie informazioni dalla cartella nativa /proc/ e le visualizza in un ambiente CLI. Ha anche varie opzioni, come mostrare percorsi completi o cercare file specifici.</h2>
+                <h2>Per questo progetto, ho utilizzato le seguenti tecnologie: </h2>
                 <h3>
                      | Ncurses <br>
                      | C++ <br>
                      | Regex <br>
-                     | Linux '/proc' directory
+                     | Directory '/proc' di Linux
                 </h3>
-                <br><br>
+            </div>
+            <div class="project-box">
                 <h1>$ GourLife</h1>
                 <br>
                 <img src="img/glife.png" alt="">
-                <h2>Un plugin Minecraft disponibile sul mio GitHub. E' un plugin hardcore che assegna un certo numero di vite ai giocatori. Quando un giocatore uccide qualcuno, guadagna una vita, mentre i morti la perdono. Tutte le impostazioni sono configurabili.</h2>
+                <h2>Questo e' un plugin per Minecraft. E' disponibile sul mio GitHub. E' un plugin hardcore che assegna a ogni giocatore un certo numero di vite. Quando un giocatore uccide qualcuno, guadagna una vita, e quando qualcuno muore, perde una vita. Tutte le impostazioni sono nel file di configurazione.</h2>
+                <h2>Per questo progetto, ho utilizzato le seguenti tecnologie: </h2>
+                <h3>
+                     | Paper API <br>
+                     | Kotlin <br>
+                </h3>
             </div>
         </div>
         <script src="code.js"></script>
