--- a/index.html
+++ b/index.html
@@ -51,12 +51,11 @@
             </div>
         </div>
         <hr>
-        <div class="section">
-            <div class="container-center">
-                <h1>Projects:</h1>
-                <br>
-                <br>
-                <h1>$ Linux Memory Dumper</h1>
+
+        <div class="section" style="justify-content: left; flex-direction: row; flex-wrap: wrap;">
+            <div class="project-box">
+
+            <h1>$ Linux Memory Dumper</h1>
                 <br>
                 <img src="img/process.png" alt="">
                 <h2>This program, available on my GitHub, works similarly to lsof. It collects information from the native /proc/ folder and displays it in a CLI environment. It also has various flags, like showing full paths or searching for specific files.</h2>
@@ -67,14 +66,22 @@
                      | Regex <br>
                      | Linux '/proc' directory
                 </h3>
-                <br>
-                <br>
+            </div>
+            <div class="project-box">
                 <h1>$ GourLife</h1>
                 <br>
                 <img src="img/glife.png" alt="">
                 <h2>This is a Minecraft plugin. It is available on my GitHub. It is a hardcore plugin that gives every player a certain number of lives. When a player kills someone, they gain a life, and when someone dies, they lose a life. All the settings are in the config.</h2>
+                <h2>For this project, I used the following technologies: </h2>
+                <h3>
+                     | Paper API <br>
+                     | Kotlin <br>
+                </h3>
             </div>
         </div>
+
+
+
         <script src="code.js"></script>
     </body>
 </html>
