--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="tab">
             <div class="button">
                 <a href="https://github.com/ItalianG0urmet" target="_blank">
-                    <img src="img/git.svg" alt="GitHub" style="width: 40px; height: 40px;">
+                    <img src="img/git.svg" alt="GitHub" class="animation" style="width: 40px; height: 40px;">
                 </a>
             </div>
             <div class="button">
