Updated project section ( reupload )

--- a/italy.html
+++ b/italy.html
@@ -66,17 +66,15 @@
                      | Directory '/proc' di Linux
                 </h3>
             </div>
-
             <div class="project-box">
                 <h1>$ GourLife</h1>
                 <br>
                 <img src="img/glife.png" alt="">
-                <h2>Questo e' un plugin per Minecraft. E' disponibile sul mio GitHub. E' un plugin hardcore che assegna a ogni giocatore un certo numero di vite. Quando un giocatore uccide qualcuno, guadagna una vita, e quando qualcuno muore, perde una vita. Tutte le impostazioni sono nel file di configurazione.</h2>
+                <h2>Questo è un plugin per Minecraft. È disponibile sul mio GitHub. È un plugin hardcore che assegna a ogni giocatore un certo numero di vite. Quando un giocatore uccide qualcuno, guadagna una vita, e quando qualcuno muore, perde una vita. Tutte le impostazioni sono nel file di configurazione.</h2>
                 <h2>Per questo progetto, ho utilizzato le seguenti tecnologie: </h2>
                 <h3>
                      | Paper API <br>
                      | Kotlin <br>
-                     | GSON <br>  
                 </h3>
             </div>
         </div>
