--- a/italy.html
+++ b/italy.html
@@ -76,6 +76,17 @@
                      | Paper API <br>
                      | Kotlin <br>
                 </h3>
+            </div>            
+            <div class="Gour-Editor">
+                <h1>$ GourLife</h1>
+                <br>
+                <img src="img/editor.png" alt="">
+                <h2>Questo è un text editor con cui sto sperimentando la libreria Rust Iced. Lo scopo finale è sviluppare una buona conoscenza di Rust e di come interagire con i file.</h2>
+                <h2>Per questo progetto, ho utilizzato le seguenti tecnologie:</h2>
+                <h3>
+                     | Rust <br>
+                     | Iced GUI <br>
+                </h3>
             </div>
         </div>
         
