--- a/italy.html
+++ b/italy.html
@@ -52,7 +52,7 @@
         </div>
         <hr>
 
-        <div class="section" style="justify-content: left; flex-direction: row; flex-wrap: wrap;">
+        <div class="section" style="justify-content: center; flex-direction: row; flex-wrap: wrap;">
             <div class="project-box">
                 <h1>$ Linux Memory Dumper</h1>
                 <br>
