--- a/index.html
+++ b/index.html
@@ -67,8 +67,19 @@
                      | Linux '/proc' directory
                 </h3>
             </div>
-            <div class="Gour-Editor">
+            <div class="project-box">
                 <h1>$ GourLife</h1>
+                <br>
+                <img src="img/glife.png" alt="">
+                <h2>This is a Minecraft plugin. It is available on my GitHub. It is a hardcore plugin that gives every player a certain number of lives. When a player kills someone, they gain a life, and when someone dies, they lose a life. All the settings are in the config.</h2>
+                <h2>For this project, I used the following technologies: </h2>
+                <h3>
+                     | Paper API <br>
+                     | Kotlin <br>
+                </h3>
+            </div>
+            <div class="project-box">
+                <h1>$ Text Editor</h1>
                 <br>
                 <img src="img/editor.png" alt="">
                 <h2>This is a text editor where I am experimenting with the Rust Iced library. The ultimate goal is to develop a strong understanding of Rust and how to interact with files.</h2>
@@ -80,6 +91,8 @@
             </div>
 
         </div>
+
+
 
         <script src="code.js"></script>
     </body>
