--- a/italy.html
+++ b/italy.html
@@ -77,8 +77,8 @@
                      | Kotlin <br>
                 </h3>
             </div>            
-            <div class="Gour-Editor">
-                <h1>$ GourLife</h1>
+            <div class="project-box">
+                <h1>$ Text Editor</h1>
                 <br>
                 <img src="img/editor.png" alt="">
                 <h2>Questo è un text editor con cui sto sperimentando la libreria Rust Iced. Lo scopo finale è sviluppare una buona conoscenza di Rust e di come interagire con i file.</h2>
