--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
                     <h2>🇮🇹</h2>
                 </a>
             </div>
+            <div class="button">
+                <a href="mail.html">
+                    <h2>📋</h2>
+                </a>
+            </div>
         </div>
         <div class="section" style="font-size: xx-large;">
             <div class="container">
