--- a/mail.html
+++ b/mail.html
@@ -27,13 +27,13 @@
             <h1 style="font-size:400%;">CONTACT ME</h1>
             <div class="contact-box">
               <h3>Your Name</h3>
-              <input type="text" placeholder="" class="text-input" />
+              <input type="text" placeholder="..." class="text-input" />
           
               <h3>Subject</h3>
-              <input type="text" placeholder="" class="text-input" />
+              <input type="text" placeholder="..." class="text-input" />
           
               <h3>Content:</h3>
-              <textarea placeholder="" class="text-input" style="height: 300px;"></textarea>
+              <textarea placeholder="..." class="text-input" style="height: 300px;"></textarea>
             </div>
             <h3>( Not working for now )</h3>
         </div>
